--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
     </h1>
     <script>
       if (window.location.href.indexOf("www.irozhlas") < 0) {
-        document.getElementById("snfl-title-div").innerHTML = "Něco ke COVIDu";
+        document.getElementById("snfl-title-div").innerHTML = "‚Svátky nás zastihnou ve velmi tísnivé situaci.‘ Opatření budou podle vědců platit i o Vánocích";
       }
     </script>
   </div>
 
   <div class="row-main row-main--narrow"> 
     <p class="text-bold text-lg">
-      Tyranosaurus perex.
+      Česko prochází kritickým obdobím. V příštích dnech se rozhodne, zda budou ještě zpřísněna opatření, jež mají zpomalit šíření koronaviru a snížit tím tlak na zdravotnický systém, kterému hrozí kolaps. Server iROZHLAS.cz proto oslovil dvacet předních odborníků. Řada z nich se domnívá, že restriktivní opatření se budou muset ještě zpřísnit a v nějaké formě nás s největší pravděpodobností budou provázet i o Vánocích.
     </p>
   </div>
 
@@ -231,12 +231,39 @@
 
   <div class="row-main row-main--narrow">
     
-    <p>Odstavce textu.</p>
+    <p>Premiér Andrej Babiš (ANO) ve svém nedělním pořadu Čau lidi řekl, že Česko čeká klíčový týden pro zvládnutí kritické situace. </p>
+<p>„Naše čísla jsou katastrofální. A ta opatření, která jsme přijali na vládě, zatím nefungují. A musel by se stát asi zázrak, aby zafungovaly,“ prohlásil. </p>
+<p>Uvedl také, že „pokud se nestane zázrak“, bude muset vláda sáhnout k&nbsp;přísnějším restrikcím. </p>
+<p>S tím souhlasí i&nbsp;část vědců a&nbsp;odborníků, které server iROZHLAS.cz oslovil. „Opatření nemohou být dostatečná k&nbsp;tomu, aby zabránila dalšímu nárůstu mrtvých a&nbsp;zaplněnosti nemocnic. To je vlak, který už jede bez ohledu na to, že jsme šlápli na brzdu,“ odpověděl na dotaz redakce imunolog Ondřej Hrušák.</p>
+<p>Nedostatečná jsou omezení také podle evolučního biologa Jaroslava Flegra. Vládní opatření podle něj obsahují příliš mnoho výjimek, takže budou těžko vymahatelná. Problém navíc vidí v&nbsp;tom, že velká část veřejnosti opatření ignoruje. </p>
+<p>„Mezi opatřeními chybí třeba roušky či respirátory na všech pracovištích, uzavření speciálních škol a&nbsp;uzavření mateřských škol pro děti, jejichž rodiče nefungují v&nbsp;klíčových profesích záchranného systému,“ reagoval na dotaz iROZHLAS.cz. </p>
+<p>Rovněž Marián Hajdúch, vedoucí koronavirové laboratorní skupiny při ministerstvu zdravotnictví, upozorňuje na to, že vláda možná bude muset přitvrdit. </p>
+<p>Jiný názor ovšem zastává vedoucí pracovník epidemiologické skupiny ministerstva zdravotnictví Roman Chlíbek. Současná opatření považuje za dostatečná. „Jsou poměrně razantní a&nbsp;rozsáhlá, významně omezující vzájemné kontakty osob jako nejdůležitější cestu šíření nákazy,“ míní.</p>
+<p><strong>Server iROZHLAS.cz se zeptal expertů na následující otázky:</strong></p>
+<ol>
+<li>Jsou současná opatření dostatečná? Proč si to myslíte?</li>
+<li>Kdy bude možné začít uvolňovat stávající „lockdown“?</li>
+<li>Jaká opatření budou platit o&nbsp;Vánocích?</li>
+</ol>
+<p><em>Článek <a href="#cont">pokračuje</a> pod anketou.</em></p>
 </div><div class="row-main row-main--article">
 <div id="anketa-wrapper"></div>
 </div><div class="row-main row-main--narrow">
+<div id="cont"></div>
 
-<p>Další odstavce textu.</p>
+<h2 id="až-se-sníží-reprodukční-číslo">Až se sníží reprodukční číslo</h2>
+<p>Oslovení odborníci se neshodli na tom, kdy by se současné restrikce mohly začít uvolňovat. Jednotní jsou ale v&nbsp;tom, že to bude pomalý proces. </p>
+<p>Šéf České lékařské komory Milan Kubek a&nbsp;vědci z&nbsp;Centra pro modelování biologických a&nbsp;společenských procesů BISOP nynější stav přirovnávají k&nbsp;Izraeli, který na měsíc zavedl úplný lockdown. Rozdíl je ale v&nbsp;tom, že tam situace nebyla zdaleka tak kritická jako nyní v&nbsp;Česku. </p>
+<p>„Musíme počítat s&nbsp;minimálně čtyřmi až šesti týdny. Pokud lidé opatření, která jsou sama o&nbsp;sobě nutná, přijmou a&nbsp;omezí své kontakty přibližně o&nbsp;polovinu, pak o&nbsp;Vánocích klesnou čísla nově detekovaných na úroveň 1000 a&nbsp;bude možno opětovně začít trasovat a&nbsp;rozvolnit většinu globálních opatření,“ napsali serveru iROZHLAS.cz vědci v&nbsp;čele s&nbsp;výkonným ředitelem BISOP, matematikem Reném Levinským. </p>
+<p>Izraelský epidemiolog Gabriel Chodick už dříve pro iROZHLAS.cz zapochyboval, že vývoj v&nbsp;zemi bude po měsíčním „uzavření“ optimistický. Zemi se ale podle něj podařilo „získat drahocenný čas a&nbsp;vstoupit do chřipkové sezony s&nbsp;poměrně dobrým základem“. </p>
+<p>Část vědců přitom upozorňuje, že k&nbsp;uvolňování může dojít teprve tehdy, až se reprodukční číslo sníží přibližně na hodnotu 0,8. To minulý týden ve středu uvedl i&nbsp;ministr zdravotnictví Roman Prymula (za ANO).</p>
+<p>„K velmi opatrnému uvolňování bude moci vláda přikročit, až reprodukční číslo klesne bezpečně pod hodnotu 1, nejlépe k&nbsp;hodnotě alespoň 0,8,“ uvedl virolog a&nbsp;ředitel Biologického centra Akademie věd ČR Libor Grubhoffer. </p>
+<h2 id="opatření-ovánocích">Opatření o&nbsp;Vánocích?</h2>
+<p>Vědci a&nbsp;odborníci se domnívají, že nás bude nějaká forma protiepidemických opatření provázet i&nbsp;během Vánoc. „Svátky nás zastihnou velmi pravděpodobně ve velmi tísnivé situaci,“ předpokládá Grubehoffer. </p>
+<p>Není však zatím jasné, jak tvrdé restrikce budou za dva měsíce platit. „Předpokládám, že i&nbsp;v době Vánoc budou platit opatření omezující setkávání lidí. Společenské akce budou mít omezenou kapacitu účastníků. Střední a&nbsp;vysoké školy budou mít nadále online výuku,“ myslí si virolog Pavel Plevka z&nbsp;brněnského výzkumného centra CEITEC.</p>
+<p>Ekonom Daniel Münich nicméně očekává, že pro řadu lidí půjde o&nbsp;nejsmutnější vánoční svátky „nejméně od roku 1968“. „Mnoho lidí ztratí zbytečně své nejbližší nebo zdraví, práci, přijde o&nbsp;živnost, dostane se do dluhové pasti, propadne depresím, školáci přijdou o&nbsp;vzdělání. Národní katastrofa historických rozměrů. Kvůli neschopnosti jednoho sebestředného člověka,“ řekl redakci. </p>
+<p>Prezident lékařské komory Kubek nicméně upozorňuje, že by lidé měli dodržovat epidemická opatření, přestože řada z&nbsp;nich ztratila důvěru ve vládu i&nbsp;v premiéra Andreje Babiše. </p>
+<p>„Rozumím tomu, že lidé nevěří politikům, protože to, čeho jsou aktuálně svědky, je skutečně festival trapnosti. Ale měli by věřit alespoň nám zdravotníkům, kteří se snažíme zachraňovat lidské životy. Noste prosím roušky. Opravdu zachraňují životy,“ apeloval.</p>
 
     <p class="meta meta--right meta--big">
       <!--[[ZPRAVY_SNOWFALL_AUTHORS:FOOTER]]-->
