nocni mod pro hipstry

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <script type="text/javascript">
     document.getElementsByTagName('article')[0].classList.add('b-data--no-img');
   </script>
-  <style>ol.snowfall,ul.snowfall{list-style:initial!important;font-size:medium!important;line-height:1.5!important}ol.snowfall>li,ul.snowfall>li{background:0 0!important;margin:0!important;padding:0!important}hr.snowfall{max-width:none!important}#anketa{display:flex;flex-wrap:wrap;justify-content:space-evenly}.respondent{width:143px;padding:10px;margin-bottom:20px}.portret{width:100px;height:100px;display:block;margin-left:auto;margin-right:auto;margin-bottom:2px;border-radius:50%}.bio{text-align:center;background-color:#f5f5f5;margin-bottom:3px;font-size:85%}.jmeno{font-weight:700}.odpoved{font-size:80%;color:#000;margin-top:0;margin-bottom:1px}.cervene{background-color:#fc8d59}.zelene{background-color:#91cf60}#lineup{height:600px}</style>
+  <style>ol.snowfall,ul.snowfall{list-style:initial!important;font-size:medium!important;line-height:1.5!important}ol.snowfall>li,ul.snowfall>li{background:0 0!important;margin:0!important;padding:0!important}hr.snowfall{max-width:none!important}#anketa{display:flex;flex-wrap:wrap;justify-content:space-evenly}.respondent{width:143px;padding:10px;margin-bottom:20px}.portret{width:100px;height:100px;display:block;margin-left:auto;margin-right:auto;margin-bottom:2px;border-radius:50%}.bio{text-align:center;background-color:#f5f5f5;margin-bottom:3px;font-size:85%}.jmeno{font-weight:700}.odpoved{font-size:80%;color:#000;margin-top:0;margin-bottom:1px}.cervene{background-color:#fc8d59}.zelene{background-color:#91cf60}#lineup{height:600px}.page-inverse .odpoved{color:#fff}.page-inverse .bio{color:#fff;background-color:#a9a9a9}</style>
 
   <div class="row-main row-main--article">
     <h1 class="b-data__title b-data__title--sm" id="snfl-title-div">
@@ -216,14 +216,14 @@
     </h1>
     <script>
       if (window.location.href.indexOf("www.irozhlas") < 0) {
-        document.getElementById("snfl-title-div").innerHTML = "‚Svátky nás zastihnou ve velmi tísnivé situaci.‘ Opatření budou podle vědců platit i o Vánocích";
+        document.getElementById("snfl-title-div").innerHTML = "‚Svátky nás zastihnou ve velmi tísnivé situaci.‘ Zákazy budou podle vědců platit i o Vánocích";
       }
     </script>
   </div>
 
   <div class="row-main row-main--narrow"> 
     <p class="text-bold text-lg">
-      Česko prochází kritickým obdobím. V příštích dnech se rozhodne, zda budou ještě zpřísněna opatření, jež mají zpomalit šíření koronaviru a snížit tím tlak na zdravotnický systém, kterému hrozí kolaps. Server iROZHLAS.cz proto oslovil dvacet předních odborníků. Řada z nich se domnívá, že restriktivní opatření se budou muset ještě zpřísnit a v nějaké formě nás s největší pravděpodobností budou provázet i o Vánocích.
+      Česko prochází kritickým obdobím. „Naše čísla jsou katastrofální,“ prohlásil premiér Andrej Babiš (ANO) v neděli ve svém pořadu Čau lidi. Ministr zdravotnictví zase varoval, že pokud se v úterý statistiky nezlepší, budou muset být protikoronavirová opatření zpřísněna. Vláda krok nakonec oznámila už v pondělí po 21. hodině. Server iROZHLAS.cz ještě před tím oslovil dvacet předních odborníků s dotazy, zda dosud platné restrikce pomohou. A kdy je případně bude možné zmírnit.
     </p>
   </div>
 
@@ -231,14 +231,15 @@
 
   <div class="row-main row-main--narrow">
     
-    <p>Premiér Andrej Babiš (ANO) ve svém nedělním pořadu Čau lidi řekl, že Česko čeká klíčový týden pro zvládnutí kritické situace. </p>
-<p>„Naše čísla jsou katastrofální. A ta opatření, která jsme přijali na vládě, zatím nefungují. A musel by se stát asi zázrak, aby zafungovaly,“ prohlásil. </p>
-<p>Uvedl také, že „pokud se nestane zázrak“, bude muset vláda sáhnout k přísnějším restrikcím. </p>
-<p>S tím souhlasí i část vědců a odborníků, které server iROZHLAS.cz oslovil. „Opatření nemohou být dostatečná k tomu, aby zabránila dalšímu nárůstu mrtvých a zaplněnosti nemocnic. To je vlak, který už jede bez ohledu na to, že jsme šlápli na brzdu,“ odpověděl na dotaz redakce imunolog Ondřej Hrušák.</p>
-<p>Nedostatečná jsou omezení také podle evolučního biologa Jaroslava Flegra. Vládní opatření podle něj obsahují příliš mnoho výjimek, takže budou těžko vymahatelná. Problém navíc vidí v tom, že velká část veřejnosti opatření ignoruje. </p>
-<p>„Mezi opatřeními chybí třeba roušky či respirátory na všech pracovištích, uzavření speciálních škol a uzavření mateřských škol pro děti, jejichž rodiče nefungují v klíčových profesích záchranného systému,“ reagoval na dotaz iROZHLAS.cz. </p>
-<p>Rovněž Marián Hajdúch, vedoucí koronavirové laboratorní skupiny při ministerstvu zdravotnictví, upozorňuje na to, že vláda možná bude muset přitvrdit. </p>
-<p>Jiný názor ovšem zastává vedoucí pracovník epidemiologické skupiny ministerstva zdravotnictví Roman Chlíbek. Současná opatření považuje za dostatečná. „Jsou poměrně razantní a rozsáhlá, významně omezující vzájemné kontakty osob jako nejdůležitější cestu šíření nákazy,“ míní.</p>
+    <p>Premiér o víkendu prohlásil, že k přísnějším opatřením bude muset kabinet sáhnout, „pokud se nestane zázrak“.</p>
+<p>Ministři zdravotnictví Roman Prymula a průmyslu a obchodu Karel Havlíček (oba za ANO) v pondělí večer oznámili, že se s platností od 28. října zavádí například noční zákaz vycházení či omezení prodejní doby v obchodech <em>(<a href="https://www.irozhlas.cz/zpravy-domov/koronavirus-v-cesku-mimoradna-opatreni-andrej-babis-vlada_2010262120_kro">více si o nich přečtete zde</a>).</em></p>
+<p>„Všechna opatření směřují k tomu, aby se maximálně zredukovaly sociální kontakty,“ řekl ministr Havlíček v Událostech, komentářích na ČT24. K zákazu denního vycházení se podle něj neschyluje.</p>
+<p><embed><center><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FCT24.cz%2Fvideos%2F718375398763163%2F&amp;show_text=0&amp;width=560" style="border:none;overflow:hidden" scrolling="no" allowtransparency="true" allowfullscreen="true" width="560" height="315" frameborder="0"></iframe></center></embed></p>
+<p>„Jsem přesvědčen, že drtivé většiny obyvatel se to zásadně nedotkne,“ prohlásil rovněž.</p>
+<p>Podle části odborníků vláda zaspala. „Opatření nemohou být dostatečná k tomu, aby zabránila dalšímu nárůstu mrtvých a zaplněnosti nemocnic. To je vlak, který už jede bez ohledu na to, že jsme šlápli na brzdu,“ řekl ještě před podnělním oznámením nových omezení imunolog Ondřej Hrušák.</p>
+<p>Evoluční biolog Jaroslav Flegr pro změnu upozornil na množství výjimek, kvůli nimž budou opatření těžko vymahatelná. Problém navíc vidí v tom, že velká část veřejnosti omezení ignoruje.</p>
+<p>„Mezi opatřeními chybí třeba roušky či respirátory na všech pracovištích, uzavření speciálních škol a uzavření mateřských škol pro děti, jejichž rodiče nefungují v klíčových profesích záchranného systému,“ reagoval na dotaz iROZHLAS.cz. Vláda v pondělí oznámila, že zaměstnavatelé musí umožnit home office těm, u nichž je to možné.</p>
+<p>Například Roman Chlíbek, vedoucí pracovník epidemiologické skupiny ministerstva zdravotnictví, považuje opatření za dostatečná. „Jsou poměrně razantní a rozsáhlá, významně omezující vzájemné kontakty osob jako nejdůležitější cestu šíření nákazy,“ míní.</p>
 <p><strong>Server iROZHLAS.cz se zeptal expertů na následující otázky:</strong></p>
 <ol>
 <li>Jsou současná opatření dostatečná? Proč si to myslíte?</li>
