tekouci fb embed

--- a/output.html
+++ b/output.html
@@ -29,7 +29,15 @@
     <p>Premiér o víkendu prohlásil, že k přísnějším opatřením bude muset kabinet sáhnout, „pokud se nestane zázrak“.</p>
 <p>Ministři zdravotnictví Roman Prymula a průmyslu a obchodu Karel Havlíček (oba za ANO) v pondělí večer oznámili, že se s platností od 28. října zavádí například noční zákaz vycházení či omezení prodejní doby v obchodech <em>(<a href="https://www.irozhlas.cz/zpravy-domov/koronavirus-v-cesku-mimoradna-opatreni-andrej-babis-vlada_2010262120_kro">více si o nich přečtete zde</a>).</em></p>
 <p>„Všechna opatření směřují k tomu, aby se maximálně zredukovaly sociální kontakty,“ řekl ministr Havlíček v Událostech, komentářích na ČT24. K zákazu denního vycházení se podle něj neschyluje.</p>
-<p><embed><center><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FCT24.cz%2Fvideos%2F718375398763163%2F&amp;show_text=0&amp;width=560" style="border:none;overflow:hidden" scrolling="no" allowtransparency="true" allowfullscreen="true" width="560" height="315" frameborder="0"></iframe></center></embed></p>
+<div class="embed embed--video" id="video-8851603825711">
+        <style>
+          #video-8851603825711 {
+            padding-top: 56.25%;
+          }
+          </style>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FCT24.cz%2Fvideos%2F718375398763163%2F&amp;show_text=0&amp;width=560" style="border:none;overflow:hidden" scrolling="no" allowtransparency="true" allowfullscreen="true" width="560" height="315" frameborder="0"></iframe>
+      </div>
+
 <p>„Jsem přesvědčen, že drtivé většiny obyvatel se to zásadně nedotkne,“ prohlásil rovněž.</p>
 <p>Podle části odborníků vláda zaspala. „Opatření nemohou být dostatečná k tomu, aby zabránila dalšímu nárůstu mrtvých a zaplněnosti nemocnic. To je vlak, který už jede bez ohledu na to, že jsme šlápli na brzdu,“ řekl ještě před podnělním oznámením nových omezení imunolog Ondřej Hrušák.</p>
 <p>Evoluční biolog Jaroslav Flegr pro změnu upozornil na množství výjimek, kvůli nimž budou opatření těžko vymahatelná. Problém navíc vidí v tom, že velká část veřejnosti omezení ignoruje.</p>
